--- a/app/elements/social-feed/social-feed.html
+++ b/app/elements/social-feed/social-feed.html
@@ -32,14 +32,11 @@
                     <a href="https://plus.google.com/102444623953913144164" target="_blank">
                         <paper-icon-button icon="app-icons:glus"></paper-icon-button>
                     </a>
-                    <a href="https://www.facebook.com/GDGLviv" target="_blank">
+                    <a href="https://www.facebook.com/gdgyangon/" target="_blank">
                         <paper-icon-button icon="app-icons:facebook"></paper-icon-button>
                     </a>
-                    <a href="https://twitter.com/gdglviv" target="_blank">
+                    <a href="https://twitter.com/gdgyangon" target="_blank">
                         <paper-icon-button icon="app-icons:twitter"></paper-icon-button>
-                    </a>
-                    <a href="https://www.linkedin.com/company/google-developers-group-lviv" target="_blank">
-                        <paper-icon-button icon="app-icons:linkedin"></paper-icon-button>
                     </a>
                 </div>
             </div>
