--- a/app/index.html
+++ b/app/index.html
@@ -92,7 +92,7 @@
                                         <div class="flex center-content-xs">
                                             <img class="logo" src="images/logo.svg" alt="GDG DevFest 2015">
                                             <p class="dates bold">October 23-24, Yangon</p>
-                                            <p class="description">The biggest Google tech conference in Ukraine carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts</p>
+                                            <p class="description">The biggest Google tech conference in Myanmar carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts</p>
                                             <p class="slogan">Think out of the box. Create what you want!</p>
                                             <div class="links layout horizontal align-pb-block">
                                                 <!-- <a href="http://goo.gl/forms/kymZwijWFy" target="_blank"> -->
@@ -112,7 +112,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=GDG%20DevFest%20Ukraine%202015&dates=20151023T090000/20151024T180000&details=The%20biggest%20Google%20related%20event%20in%20Ukraine%20carefully%20crafted%20for%20you%20by%20GDG%20community!%20Awesome%20speakers%20and%20lot's%20of%20fun!%20Details%20at%20http://devfest.gdg.org.ua&location=Shchyretska%20St%2036,%20L'viv,%20Львівська%20область,%20Ukraine&pli=1&uid=&sf=true&output=xml#eventpage_6"
+                                <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=GDG%20DevFest%20Yangon%202015&dates=20151003T090000/20151003T180000&details=The%20biggest%20Google%20related%20event%20in%20Myanmar%20carefully%20crafted%20for%20you%20by%20GDG%20community!%20Awesome%20speakers%20and%20lot%27s%20of%20fun!%20Details%20at%20http://devfest.gdgyangon.org&location=University+of+Computer+Studies/@16.8076679,96.1452164,17.25z"
                                 target="_blank" onclick="ga('send', 'add-event-to-calendar', 'button', 'click');">
                                     <paper-fab class="section-fab-right" icon="icons:event"></paper-fab>
                                 </a>
@@ -122,7 +122,7 @@
                                 <h4 class="heading">Our Awesome Speakers</h4>
                             </featured-people>
                             <call-to-action></call-to-action>
-                            <photo-block></photo-block>
+                            <!-- <photo-block></photo-block> -->
                             <tickets-block></tickets-block>
                             <latest-news source="../../data/blog.json"></latest-news>
                             <social-feed source="http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_interval=7200"></social-feed>
