fix the title, date for the index

--- a/app/index.html
+++ b/app/index.html
@@ -7,25 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Ye Lin Aung, GDG Yangon">
     <meta name="description" content="The biggest Google tech conference in Ukraine carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts">
-    <meta name="keywords" content="event, gdg, gde, devfest, google, programming, android, chrome, polymer, developers, lviv, cloud, dfua">
+    <meta name="keywords" content="event, gdg, gde, devfest, google, programming, android, chrome, polymer, developers, yangon, cloud, myanmar">
     <meta name="google-site-verification" content="GxUE9cpxaP54b7Ymknz-fxWBiIUrJOqx1PZ5gkRHGeY" />
-    <link rel="canonical" href="http://devfest.gdg.org.ua/">
-    <title>GDG DevFest Ukraine 2015 &bull; October 23-24, Yangon</title>
+    <link rel="canonical" href="http://devfest.gdgyangon.org/">
+    <title>GDG DevFest Yangon Ukraine 2015 &bull; October 3rd, Yangon</title>
 
     <!-- Social: Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@GDGYangon">
-    <meta name="twitter:title" content="GDG DevFest Ukraine 2015 &bull; October 23-24, Yangon">
-    <meta name="twitter:description" content="The biggest Google tech conference in Ukraine carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts">
+    <meta name="twitter:title" content="GDG DevFest Yangon 2015 &bull; October 3, Yangon">
+    <meta name="twitter:description" content="The biggest Google tech conference in Myanmar carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts">
     <meta name="twitter:image:src" content="http://devfest.gdg.org.ua/images/seo/seo.jpg">
 
     <!-- Social: Facebook / Open Graph -->
-    <meta property="og:title" content="GDG DevFest Ukraine 2015 &bull; October 23-24, Yangon" />
-    <meta property="og:site_name" content="GDG DevFest Ukraine 2015 &bull; October 23-24, Yangon" />
+    <meta property="og:title" content="GDG DevFest Yangon 2015 &bull; October 3, Yangon" />
+    <meta property="og:site_name" content="GDG DevFest Yangon 2015 &bull; October 3, Yangon" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://devfest.gdg.org.ua/" />
-    <meta property="og:image" content="http://devfest.gdg.org.ua/images/seo/seo.jpg" />
-    <meta property="og:description" content="The biggest Google tech conference in Ukraine carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts" />
+    <meta property="og:url" content="http://devfest.gdgyangon.org" />
+    <meta property="og:image" content="" />
+    <meta property="og:description" content="The biggest Google tech conference in Myanmar carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts" />
 
     <!-- Chrome for Android theme color -->
     <meta name="theme-color" content="#00BCD4">
