added more speakers

--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,7 @@
                                     <div class="layout vertical-horizontal">
                                         <div class="flex center-content-xs">
                                             <img class="logo" src="images/logo.svg" alt="GDG DevFest 2015">
-                                            <p class="dates bold">October 23-24, Yangon</p>
+                                            <p class="dates bold">October 3, Yangon</p>
                                             <p class="description">The biggest Google tech conference in Myanmar carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts</p>
                                             <p class="slogan">Think out of the box. Create what you want!</p>
                                             <div class="links layout horizontal align-pb-block">
