--- a/app/elements/footer-block/footer-block.html
+++ b/app/elements/footer-block/footer-block.html
@@ -135,35 +135,32 @@
                         <span class="link-block-title block">For visitors</span>
                         <ul class="link-block">
                             <li><a href="https://developers.google.com/" target="_blank">Google Developers</a></li>
-                            <li><a href="http://gdg-devfest-ua.appspot.com/" target="_blank">GDG DevFest Ukraine 2013</a></li>
-                            <li><a href="/2014" target="_blank">GDG DevFest Ukraine 2014</a></li>
+                            <!-- <li><a href="http://gdg-devfest-ua.appspot.com/" target="_blank">GDG DevFest Ukraine 2013</a></li> -->
+                            <!-- <li><a href="/2014" target="_blank">GDG DevFest Ukraine 2014</a></li> -->
                             <li><a href="/code-of-conduct">Code of Conduct</a></li>
                         </ul>
                     </div>
-                    <div class="flex link-block-wrapper">
-                        <span class="link-block-title block">For partners</span>
-                        <ul class="link-block">
-                            <li><a href="/assets/GDG_DevFest_Ukraine_2015_Partnership_Proposition.pdf" target="_blank">Partnership Proposition</a></li>
-                            <li><a href="http://bit.ly/dfua-media" target="_blank">Media Kit</a></li>
-                        </ul>
-                    </div>
+                    <!-- <div class="flex link-block-wrapper"> -->
+                    <!--     <span class="link-block-title block">For partners</span> -->
+                    <!--     <ul class="link-block"> -->
+                    <!--         <li><a href="/assets/GDG_DevFest_Ukraine_2015_Partnership_Proposition.pdf" target="_blank">Partnership Proposition</a></li> -->
+                    <!--         <li><a href="http://bit.ly/dfua-media" target="_blank">Media Kit</a></li> -->
+                    <!--     </ul> -->
+                    <!-- </div> -->
                     <div class="flex link-block-wrapper">
                         <span class="link-block-title block">Contact us</span>
                         <ul class="link-block">
-                            <li><a href="mailto:devfest@gdg.org.ua">devfest@gdg.org.ua</a></li>
+                            <li><a href="mailto:yelinnwai@gmail.com">yelinnwai@gmail.com</a></li>
                         </ul>
                         <div class="icons-wrapper align-pb-block">
-                            <a href="https://plus.google.com/102444623953913144164" target="_blank">
+                            <a href="https://plus.google.com/105530023682923117858" target="_blank">
                                 <paper-icon-button icon="app-icons:glus"></paper-icon-button>
                             </a>
-                            <a href="https://www.facebook.com/GDGLviv" target="_blank">
+                            <a href="https://www.facebook.com/gdgyangon" target="_blank">
                                 <paper-icon-button icon="app-icons:facebook"></paper-icon-button>
                             </a>
-                            <a href="https://twitter.com/gdglviv" target="_blank">
+                            <a href="https://twitter.com/gdgyangon" target="_blank">
                                 <paper-icon-button icon="app-icons:twitter"></paper-icon-button>
-                            </a>
-                            <a href="https://www.linkedin.com/company/google-developers-group-lviv" target="_blank">
-                                <paper-icon-button icon="app-icons:linkedin"></paper-icon-button>
                             </a>
                         </div>
                     </div>
