--- a/app/elements/footer-block/footer-block.html
+++ b/app/elements/footer-block/footer-block.html
@@ -122,7 +122,7 @@
         <div class="container footer layout vertical">
             <div class="footer-content layout horizontal justified">
                 <div class="flex gplus">
-                    <g:plusone size="medium" width="200" annotation="inline" href="http://devfest.gdg.org.ua/"></g:plusone>
+                    <g:plusone size="medium" width="200" annotation="inline" href="http://devfest.gdgyangon.org/"></g:plusone>
                 </div>
                 <paper-button class="footer-backtotop" on-tap="backToTop" noink>
                     Back to top
@@ -164,11 +164,11 @@
                             </a>
                         </div>
                     </div>
-                    <div class="flex">
+<!--                     <div class="flex">
                         <span class="link-block-title block">Subscribe</span>
                         <span>No spam, only the latest news and updates!</span>
                         <mailchimp-subscribe url="{{url}}" name="{{name}}"></mailchimp-subscribe>
-                    </div>
+                    </div> -->
                 </nav>
             </div>
             <!-- <div class="line full-width"></div> -->
