--- a/app/index.html
+++ b/app/index.html
@@ -108,7 +108,7 @@
                                             </div>
                                         </div>
                                         <div class="flex relative right-section">
-                                            <iron-image class="fit" src="images/lviv.svg" sizing="contain"></iron-image>
+                                            <iron-image class="fit" src="images/Buildings.png" sizing="contain"></iron-image>
                                         </div>
                                     </div>
                                 </div>
