--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Ye Lin Aung, GDG Yangon">
-    <meta name="description" content="The biggest Google tech conference in Ukraine carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts">
+    <meta name="description" content="The biggest Google tech conference in Myanmar carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts">
     <meta name="keywords" content="event, gdg, gde, devfest, google, programming, android, chrome, polymer, developers, yangon, cloud, myanmar">
     <meta name="google-site-verification" content="GxUE9cpxaP54b7Ymknz-fxWBiIUrJOqx1PZ5gkRHGeY" />
     <link rel="canonical" href="http://devfest.gdgyangon.org/">
-    <title>GDG DevFest Yangon Ukraine 2015 &bull; October 3rd, Yangon</title>
+    <title>GDG DevFest Yangon, Myanmar 2015 &bull; October 3rd, Yangon</title>
 
     <!-- Social: Twitter -->
     <meta name="twitter:card" content="summary_large_image">
