--- a/src/elements/footer-nav.html
+++ b/src/elements/footer-nav.html
@@ -70,7 +70,7 @@
       <a href="{$ organizer.url $}" target="_blank" rel="noopener noreferrer">
         <plastic-image
           class="footer-logo"
-          srcset="../../images/logo.png"
+          srcset="../../images/devfest_2018.png"
           sizing="contain"
           alt="{$ organizer.name $}"
           lazy-load
