--- a/src/pages/speakers-page.html
+++ b/src/pages/speakers-page.html
@@ -29,7 +29,7 @@
         display: grid;
         grid-template-columns: 1fr;
         grid-gap: 16px;
-        min-height: 80%;
+        min-height: 50%;
       }
 
       .speaker {
@@ -247,7 +247,7 @@
       </template>
     </div>
 
-    <previous-speakers-block></previous-speakers-block>
+    <!-- <previous-speakers-block></previous-speakers-block> -->
 
     <footer-block></footer-block>
 
