add schedule and sessions

--- a/src/elements/dialogs/dialog-styles.html
+++ b/src/elements/dialogs/dialog-styles.html
@@ -11,6 +11,9 @@
         background: #fff;
         color: var(--primary-text-color);
         box-shadow: var(--box-shadow);
+        font-family: var(--font-family);
+
+
       }
 
       app-header {
