--- a/src/elements/shared-styles.html
+++ b/src/elements/shared-styles.html
@@ -5,6 +5,7 @@
 <dom-module id="shared-styles">
   <template>
     <style>
+      @import url('https://fonts.googleapis.com/css?family=Padauk');
       :host {
         --dark-primary-color: #512DA8;
         --default-primary-color: #673AB7;
@@ -37,7 +38,7 @@
         --box-shadow: 0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
         --box-shadow-primary-color: 0 3px 3px -2px rgba(103, 58, 183, 0.3), 0 3px 4px 0 rgba(103, 58, 183, 0.3), 0 1px 8px 0 rgba(103, 58, 183, 0.3);
         --box-shadow-primary-color-hover: 0 1px 3px -2px rgba(103, 58, 183, 0.4), 0 4px 5px 0 rgba(103, 58, 183, 0.4), 0 2px 9px 0 rgba(103, 58, 183, 0.4);
-        --font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; /*TODO Change to Open Sans*/
+        --font-family: 'Padauk','Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; /*TODO Change to Open Sans*/
         --max-container-width: 1280px;
 
         --primary-color-transparent: rgba(103, 58, 183, 0.1);
@@ -83,8 +84,8 @@
       h5,
       h6 {
         margin: 0;
-        font-family: "Product Sans", arial, sans-serif;
-        font-weight: normal;
+        font-family: var(--font-family);
+        font-weight:bolder;
       }
 
       h1 {
