--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -188,8 +188,8 @@
     <about-organizer-block></about-organizer-block>
     <!-- <featured-videos></featured-videos>
     <latest-posts-block></latest-posts-block> -->
+    <partners-block></partners-block>
     <map-block></map-block>
-    <!-- <partners-block></partners-block> -->
     <footer-block></footer-block>
   </template>
 
